# hmonero

./: .gitignore  README.md  bar.address.txt  bar.mnemonic  circle.yml  foo.address.txt  foo.seed  foos  foos.address.txt  foos.keys  hmonero.cabal  stack.yaml
src/: Monero.hs
src/Data/: Process.hs
src/Data/Json/: RPC.hs
src/Monero/: Client.hs  Internal.hs  Types.hs
src/Monero/Client/: RPC.hs
src/Monero/Daemon/: RPC.hs
src/Monero/Wallet/: Cpp.hs  Process.hs  RPC.hs
test/: MoneroSpec.hs  Spec.hs  Test.hs
