Name:                   hmonero
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Bindings to the monero wallet & daemon
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Monero.Types
                        Monero.Wallet.RPC
                        Monero.Wallet.Process
                        Monero.Daemon.RPC
                        Data.Json.RPC
                        Data.Process
  Build-Depends:        base >= 4.8 && < 5
                      , aeson
                      , attoparsec
                      , bytestring
                      , data-default
                      , directory
                      , exceptions
                      , fileneglect
                      , filepath
                      , http-client <= 0.4.29
                      , iproute
                      , mtl
                      , network
                      , process
                      , text
                      , QuickCheck

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall -threaded
  Main-Is:              Test.hs
  Build-Depends:        base
                      , hmonero
                      , data-default
                      , directory
                      , HUnit
                      , tasty
                      , tasty-quickcheck
                      , tasty-hunit
                      , QuickCheck
                      , quickcheck-instances

Source-Repository head
  Type:                 git
  Location:             https://github.com/moneybit/hmonero
